--- a/server-side/package.json
+++ b/server-side/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-validator": "^0.14.0",
     "dotenv": "^16.1.4",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
