--- a/server-side/package.json
+++ b/server-side/package.json
@@ -12,15 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.1.4",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
